--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ android {
     }
 }
 
+def work_version = "2.8.1"
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -36,4 +38,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation "androidx.work:work-runtime:$work_version"
 }
